--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="3c9f7e29-2612-453f-ad1a-0050f23e4822" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Potfolio Project" />
     <meta property="og:type" content="website" />
   </head>
 
