--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="3c9f7e29-2612-453f-ad1a-0050f23e4822" />
+    <meta property="og:title" content="Potfolio" />
     <meta property="og:description" content="Potfolio Project" />
     <meta property="og:type" content="website" />
   </head>
