--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.ibb.co/SXKwB7H6/D0-B99-E73-5350-45-EC-91-A4-68066-A0-D99-F2.png" />
-
+    <meta property="og:image" content="https://i.ibb.co/gbVmR1hW/F53-C8-D45-B897-455-B-A375-99-F74-FD3-AFED.jpg">
     <meta property="og:title" content="Potfolio" />
     <meta property="og:description" content="Potfolio Project" />
     <meta property="og:type" content="website" />
